--- a/requirejs/index.html
+++ b/requirejs/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>require.js源码学习</title>
-    <script data-main="js/main" src="js/require.js"></script>
+    <script data-main="./js/main" src="./js/require.js"></script>
 </head>
 <body>
     
